# rust-chmod

./: .gitignore  Cargo.toml  README.md
.github/workflows/: tests.yaml
src/: chmod.rs  main.rs
