[package]
name = "chmod-conversion"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/harrysharma1/rust-chmod"
license = "MIT"
description = "Chmod conversion tool"
homepage = "https://github.com/harrysharma1/rust-chmod"
readme = "README.md"
keywords = ["chmod","conversion"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
